# rules_poetry_setuptools

./: BUILD  WORKSPACE  main.py  pyproject.toml
