[tool.poetry]
name = "rules_poetry_setuptools"
version = "0.1.0"
description = ""
authors = ["Geoff Mishkin <geoff@amsa.info>"]

[tool.poetry.dependencies]
python = "~3.8.1"
protobuf = "==3.11.3"

[tool.poetry.dev-dependencies]
grpcio-tools = "==1.27.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
